// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Character Component Checks disabled character 1`] = `
<div
  className="character"
  id="1"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  style={
    Object {
      "backgroundColor": "#ff6767b8",
      "borderRadius": "100%",
      "display": "block,",
      "maxHeight": 85,
      "maxWidth": 85,
    }
  }
  tabIndex={0}
>
  <img
    alt="Mario"
    className="enabled"
    src="http://localhost/public/images/character_icons/mario.png"
    style={
      Object {
        "display": "block",
        "margin": "auto",
        "maxWidth": 80,
        "opacity": 0.6,
        "padding": 1,
      }
    }
  />
</div>
`;

exports[`Testing Character Component Checks enabled character 1`] = `
<div
  className="character"
  id="1"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  style={
    Object {
      "backgroundColor": "white",
      "borderRadius": "100%",
      "display": "block,",
      "maxHeight": 85,
      "maxWidth": 85,
    }
  }
  tabIndex={0}
>
  <img
    alt="Mario"
    className="enabled"
    src="http://localhost/public/images/character_icons/mario.png"
    style={
      Object {
        "display": "block",
        "margin": "auto",
        "maxWidth": 80,
        "opacity": 1,
        "padding": 1,
      }
    }
  />
</div>
`;

exports[`Testing Character Component Checks hidden character 1`] = `
<div
  className="character"
  id="1"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  style={
    Object {
      "backgroundColor": "grey",
      "borderRadius": "100%",
      "display": "block,",
      "maxHeight": 85,
      "maxWidth": 85,
    }
  }
  tabIndex={0}
>
  <img
    alt="Mario"
    className="enabled"
    src="http://localhost/public/images/character_icons/mario.png"
    style={
      Object {
        "display": "block",
        "margin": "auto",
        "maxWidth": 80,
        "opacity": 0.6,
        "padding": 1,
      }
    }
  />
</div>
`;

exports[`Testing Character Component Checks played character 1`] = `
<div
  className="character"
  id="1"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  style={
    Object {
      "backgroundColor": "#70f78e",
      "borderRadius": "100%",
      "display": "block,",
      "maxHeight": 85,
      "maxWidth": 85,
    }
  }
  tabIndex={0}
>
  <img
    alt="Mario"
    className="enabled"
    src="http://localhost/public/images/character_icons/mario.png"
    style={
      Object {
        "display": "block",
        "margin": "auto",
        "maxWidth": 80,
        "opacity": 0.6,
        "padding": 1,
      }
    }
  />
</div>
`;
